--- a/app/src/main/res/layout/techinform1.xml
+++ b/app/src/main/res/layout/techinform1.xml
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/Route"
+        android:id="@+id/route"
         android:layout_width="147dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.858"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Route"
+        app:layout_constraintTop_toBottomOf="@+id/route"
         app:layout_constraintVertical_bias="0.042" />
 
 
