--- a/app/src/main/res/layout/activity_institute_page.xml
+++ b/app/src/main/res/layout/activity_institute_page.xml
@@ -45,11 +45,12 @@
 
     <TextView
         android:id="@+id/geninfo"
-        android:layout_width="387dp"
-        android:layout_height="132dp"
+        android:layout_width="358dp"
+        android:layout_height="137dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Inside CMI we have the studies Communication(CO),Communication and Multimedia Design (CMD), Creative Media and Game Technologies (CMGT, Technical Informatica (TI) and Informatica (INF). The 'Stadslab' is also established in the building."
+        android:textColor="#ffffff"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,10 +71,10 @@
         android:text="opening hours"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.168"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
+        app:layout_constraintVertical_bias="0.589" />
 
     <Button
         android:id="@+id/floor_plans"
@@ -105,10 +106,10 @@
         android:text="route"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.168"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/opening_hours"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintVertical_bias="0.119" />
 
     <Button
         android:id="@+id/website"
