--- a/app/src/main/res/layout/cmd1.xml
+++ b/app/src/main/res/layout/cmd1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CC0033"
-    tools:context=".InformaticaOpendag">
+    tools:context=".CMD1">
 
     <Button
         android:id="@+id/AddToCalender"
