--- a/app/src/main/res/layout/informatica_opendag3.xml
+++ b/app/src/main/res/layout/informatica_opendag3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CC0033"
-    tools:context=".CreativeMGT1">
+    tools:context=".InformaticaOpendag3">
 
     <Button
         android:id="@+id/AddToCalender"
@@ -71,13 +71,13 @@
 
     <TextView
         android:id="@+id/infOpenDay"
-        android:layout_width="290dp"
-        android:layout_height="60dp"
+        android:layout_width="236dp"
+        android:layout_height="33dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Creative Media and Game Technologies Open Day"
+        android:text="Informatica Open Day"
         android:textColor="#ffffff"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -98,7 +98,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="date"
-        android:text="May 15th, 2019"
+        android:text="February 23rd 2019"
         android:textColor="#ffffff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
