Changed the layout of all the buttons in the app

--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -95,8 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="#FFFFFF"
-        android:elevation="4dp"
+        android:background="@drawable/custom_button"
         android:text="SEND!"
         android:textColor="#CC0033"
         app:layout_constraintBottom_toBottomOf="parent"
