--- a/app/src/main/res/layout/activity_institute_page.xml
+++ b/app/src/main/res/layout/activity_institute_page.xml
@@ -61,25 +61,27 @@
 
     <Button
         android:id="@+id/opening_hours"
-        android:layout_width="140dp"
-        android:layout_height="44dp"
+        android:layout_width="147dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@drawable/custom_button"
         android:text="opening hours"
+        android:textColor="#CC0033"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589" />
+        app:layout_constraintVertical_bias="0.579" />
 
     <Button
         android:id="@+id/floor_plans"
-        android:layout_width="140dp"
-        android:layout_height="44dp"
+        android:layout_width="147dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -87,6 +89,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="floorplans"
+        android:textColor="#CC0033"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toTopOf="@+id/website"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/opening_hours"
@@ -95,8 +99,8 @@
 
     <Button
         android:id="@+id/route"
-        android:layout_width="140dp"
-        android:layout_height="44dp"
+        android:layout_width="147dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -104,6 +108,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="route"
+        android:textColor="#CC0033"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.121"
@@ -113,8 +119,8 @@
 
     <Button
         android:id="@+id/website"
-        android:layout_width="140dp"
-        android:layout_height="44dp"
+        android:layout_width="147dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -122,6 +128,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="website"
+        android:textColor="#CC0033"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/route"
