questionform color changed

--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CC0033"
+    android:background="#FFFFFF"
     tools:context="com.example.homescreen.questionform">
 
     <TextView
@@ -17,7 +17,7 @@
         android:layout_marginBottom="28dp"
         android:gravity="center_horizontal"
         android:text="Question form"
-        android:textColor="#FFFFFF"
+        android:textColor="#CC0033"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/nameEdit"
         app:layout_constraintStart_toStartOf="@+id/nameEdit"
@@ -32,8 +32,8 @@
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
         app:layout_constraintBottom_toTopOf="@+id/phoneEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,8 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="E-mail"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
         app:layout_constraintBottom_toTopOf="@+id/questionEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +64,8 @@
         android:ems="10"
         android:inputType="text"
         android:hint="Subject"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
+        android:textColorHint="#CC0033"
+        android:textColor="#CC0033"
         app:layout_constraintBottom_toTopOf="@+id/emailEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,12 +78,12 @@
         android:layout_marginBottom="56dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:breakStrategy="balanced"
-        android:textColor="#FFFFFF"
+        android:textColor="#CC0033"
         android:ems="10"
         android:fitsSystemWindows="true"
         android:hint="Type your question here"
         android:inputType="textMultiLine"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#CC0033"
         app:layout_constraintBottom_toTopOf="@+id/sendButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -95,10 +95,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#CC0033"
         android:elevation="4dp"
         android:text="SEND!"
-        android:textColor="#CC0033"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
