questionform color changeds

--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -95,10 +95,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="#CC0033"
+        android:backgroundTint="#FFFFFF"
         android:elevation="4dp"
         android:text="SEND!"
-        android:textColor="#FFFFFF"
+        android:textColor="#CC0033"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
