Almost all of the hardcoded strings are done

--- a/app/src/main/res/layout/questionform_activity.xml
+++ b/app/src/main/res/layout/questionform_activity.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="28dp"
         android:gravity="center_horizontal"
-        android:text="Question form"
+        android:text="@string/Question_form"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/nameEdit"
         app:layout_constraintStart_toStartOf="@+id/nameEdit"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,8 +32,8 @@
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/phoneEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
