--- a/app/src/main/res/layout/informatica1.xml
+++ b/app/src/main/res/layout/informatica1.xml
@@ -13,8 +13,6 @@
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="100dp"
-        android:text="@string/Add_To_Calendar"
         android:layout_marginBottom="104dp"
         android:background="@drawable/custom_button"
         android:text="Add to calendar"
@@ -34,7 +32,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/Share_it"
         android:text="Share it"
         android:textColor="#CC0033"
         android:background="@drawable/custom_button"
@@ -52,7 +49,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="104dp"
-        android:text="@string/Route"
         android:text="Route"
         android:textColor="#CC0033"
         android:background="@drawable/custom_button"
@@ -71,7 +67,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/Questions"
         android:background="@drawable/custom_button"
         android:text="Questions"
         android:textColor="#CC0033"
@@ -90,7 +85,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/Informatica_title"
+        android:text="Informatica Open Day"
         android:textColor="#ffffff"
         android:textSize="24sp"
         android:textStyle="bold"
