--- a/app/src/main/res/layout/route_xml.xml
+++ b/app/src/main/res/layout/route_xml.xml
@@ -24,7 +24,7 @@
         android:layout_height="49dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/By_car"
+        android:text="By car"
         android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -35,7 +35,7 @@
         android:id="@+id/textView"
         android:layout_width="399dp"
         android:layout_height="135dp"
-        android:text="@string/By_car_info"
+        android:text="Wijnhaven 107 lays in the center of Rotterdam. If approaching from the south, drive over the Erasmusbrug. When approaching from the north, drive over the Coolsingel in the direction of the Kubuswoningen, then take a right turn at the Posthornstraat, and take the second right turn to Wijnhaven 107."
         android:textColor="#ffffff"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="54dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/Public_transport"
+        android:text="Public transport"
         android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +59,7 @@
         android:id="@+id/textView2"
         android:layout_width="399dp"
         android:layout_height="99dp"
-        android:text="@string/Public_transport_info"
+        android:text="From Rotterdam Central Station, take metroline D too 'De Akkers' or take metroline E too 'Slinge'. Exit the metro at station Beurs, walk toward Maritime museum. You should see the building when you're standing on 'Plein 1940'"
         android:textColor="#ffffff"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
