--- a/app/src/main/res/layout/activity_communication_page.xml
+++ b/app/src/main/res/layout/activity_communication_page.xml
@@ -12,8 +12,9 @@
         android:layout_width="368dp"
         android:layout_height="80dp"
         android:layout_below="@+id/lijn2"
-        android:text="@string/Communication_info"
-        android:textColor="#FFFFFF" />
+        android:text="Do you have a keen eye and ear for the stories of people and brands? Are you creative with text and image and fascinated by the world of media? Then the Communication course is for you!"
+        android:textColor="#FFFFFF"
+         />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -26,11 +27,12 @@
         android:id="@+id/textView7"
         android:layout_width="234dp"
         android:layout_height="44dp"
-        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
-        android:text="@string/Communication"
+        android:layout_below="@+id/imageView2"
+        android:text="Communication"
         android:textColor="#FFFFFF"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        />
 
 
     <TextView
@@ -38,8 +40,9 @@
         android:layout_width="374dp"
         android:layout_height="149dp"
         android:layout_below="@id/lijn3"
-        android:text="@string/Comminucation_info2"
-        android:textColor="#FFFFFF" />
+        android:text="Our Communication course trains you in four years to what we - proudly - call a smart connector. A professional who ensures smart connections. With the use of social tools, storytelling, big data and co-creation, for example. You develop creative concepts such as media campaigns, events and story platforms. Based on good research, theory and strategy and of course your own surprising ideas."
+        android:textColor="#FFFFFF"
+        />
 
     <TextView
         android:id="@+id/textView10"
@@ -47,17 +50,22 @@
         android:layout_height="63dp"
         android:layout_below="@+id/lijn4"
         android:layout_centerHorizontal="true"
-        android:text="@string/opendayCommunication"
+        android:text="Upcoming openday:                                                  04/04/2019"
         android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+         />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="384dp"
         android:layout_height="115dp"
         android:layout_below="@+id/lijn5"
-        android:text="@string/Communication_info3"
-        android:textColor="#FFFFFF" />
+        android:text="The Communication course teaches you to touch, connect and move people as a smart connector.
+
+Curious? Stories from the training can be found on our platform
+www.smartconnecting.nl."
+        android:textColor="#FFFFFF"
+         />
 
 
     <View
