--- a/app/src/main/res/layout/activity_informatica_page.xml
+++ b/app/src/main/res/layout/activity_informatica_page.xml
@@ -12,8 +12,9 @@
         android:layout_width="368dp"
         android:layout_height="80dp"
         android:layout_below="@+id/lijn9"
-        android:text="@string/Informatica_info"
-        android:textColor="#FFFFFF" />
+        android:text="We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems"
+        android:textColor="#FFFFFF"
+         />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -28,9 +29,10 @@
         android:layout_height="44dp"
         android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
-        android:text="@string/Informatica"
+        android:text="Informatica"
         android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+         />
 
 
     <TextView
@@ -38,7 +40,7 @@
         android:layout_width="392dp"
         android:layout_height="181dp"
         android:layout_below="@+id/lijn6"
-        android:text="@string/Informatica_info2"
+        android:text="Software can be found all around us. You are the specialist in creating large and complex software information systems that work quickly, efficiently and securely. You can think of developing a functional app, but also analyzing large amounts of data from social media. When developing these systems you come into contact with languages. In the first year you learn how to program in Python and  Java / C #. From the second year on, you choose which language you want to use. In addition to programming and developing various applications, you also learn to collaborate."
         android:textColor="#FFFFFF" />
 
     <TextView
@@ -46,9 +48,9 @@
         android:layout_width="289dp"
         android:layout_height="63dp"
         android:layout_below="@+id/lijn7"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
-        android:text="@string/InformaticaOpendag"
+        android:layout_centerHorizontal="true"
+        android:text="Upcoming openday:                                                  04/04/2019"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
@@ -59,7 +61,7 @@
         android:layout_below="@+id/lijn8"
         android:layout_marginTop="30dp"
 
-        android:text="@string/Informatica_info3"
+        android:text="Are you interested in new technological developments, curious, a little quirky and a go-getter, then the Computer Science course is for you!"
         android:textColor="#FFFFFF" />
 
 
