--- a/app/src/main/res/layout/studies.xml
+++ b/app/src/main/res/layout/studies.xml
@@ -12,8 +12,9 @@
         android:layout_width="383dp"
         android:layout_height="76dp"
         android:layout_below="@+id/view2"
-        android:text="@string/Communication_studie_info"
-        android:textColor="#FFFFFF" />
+        android:text="Do you have a keen eye and ear for the stories op people and brands? Are you creative with text and image and facinated by the world of media? Then the communication course is for you!"
+        android:textColor="#FFFFFF"
+         />
 
     <ImageView
         android:id="@+id/imageView"
@@ -29,9 +30,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="false"
-        android:text="@string/Informatica_button"
+        android:text="Informatica"
         android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        />
 
     <Button
         android:id="@+id/techinformaticaClick"
@@ -39,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView4"
-        android:text="@string/Tech_Informatica_button"
+        android:text="Technische Informatica"
         android:textColor="#FFFFFF"
         android:textSize="24sp" />
 
@@ -49,25 +51,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView5"
-        android:text="@string/Communication_button"
+        android:text="Communication"
         android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+         />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="348dp"
         android:layout_height="80dp"
         android:layout_below="@+id/lijn1"
-        android:text="@string/Informatica_studie_info"
-        android:textColor="#FFFFFF" />
+        android:text="We train you to be a software engineer. You get started with the development of software for various applications. You are able to analyze design and implement complex IT systems"
+        android:textColor="#FFFFFF"
+         />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="383dp"
         android:layout_height="70dp"
         android:layout_below="@id/view"
-        android:text="@string/Tech_informatica_studie_info"
-        android:textColor="#FFFFFF" />
+        android:text="As a technical computer scientist you work on modern IT systems in which hardware and software are integrated. Thanks to programming and hardware knowledge, you can operate at the intersection thereof."
+        android:textColor="#FFFFFF"
+       />
 
     <View
         android:id="@+id/lijn1"
