--- a/app/src/main/res/layout/homescreen.xml
+++ b/app/src/main/res/layout/homescreen.xml
@@ -59,7 +59,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="Open dagen"
+                android:text="@string/OpendagenText"
                 android:textColor="#ffffff"
                 android:textSize="23sp"
                 android:textStyle="bold|italic"
